// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage should match snapshot when 400 1`] = `
<Fragment>
  <div>
    <h1
      id="error-heading"
    >
      Something went wrong
    </h1>
    <div>
      <p>
        Sorry, but an error has occurred with the service.
      </p>
    </div>
  </div>
</Fragment>
`;

exports[`ErrorPage should match snapshot when 403 1`] = `
<Fragment>
  <div>
    <h1
      id="error-heading"
    >
      Unauthorised
    </h1>
    <div>
      <p>
        Sorry, but an error has occurred with the service.
      </p>
    </div>
  </div>
</Fragment>
`;

exports[`ErrorPage should match snapshot when 404 1`] = `
<Fragment>
  <div>
    <h1
      id="error-heading"
    >
      Page not found
    </h1>
    <div>
      <p>
        If you entered a web address please check it was correct.
      </p>
    </div>
  </div>
</Fragment>
`;

exports[`ErrorPage should match snapshot when 503 1`] = `
<Fragment>
  <div>
    <h1
      id="error-heading"
    >
      Service unavailable
    </h1>
    <div>
      <p>
        Sorry, but this service is currently unavailable. Please try again later.
      </p>
    </div>
  </div>
</Fragment>
`;
